[package]
name = "tasks-org-todo-txt-import"
authors = ["Dessalines"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
serde = {version = "1.0.151" , features = ["derive"] }
serde_json = "1.0.89"
todo-txt = "2.2.1"
